# Non-exponentialRB

./: .gitignore  .python-version  Plot_Expectation_Values.py  Plot_High_Mem_Flip_Prob.py  Plot_High_Mem_Reset_Prob.py  Plot_High_Memory_Fidelity.py  Plot_Low_Mem_Flip_Prob.py  Plot_Low_Mem_Reset_Prob.py  Plot_Low_Memory_Fidelity.py  Plot_Return_Prob.py  PresentRBResults.py  README.md  Sample_Clifford_Element.py  Sampler.py  Srb_With_Memory.py  SymplecticClifford.py  Symplectic_Bijection.py  Symplectic_Clifford_2  __init__.py  profile  pyproject.toml  requirements.txt  setup.cfg  srb.py  stim_test.py  symplectic_clifford.py  test_present_results.py  test_sample_clifford.py  test_srb.py  test_symplectic_clifford.py  utils.py
Figures/: Figure_1.py  Figure_2.py  Figure_3.py  Figure_4.py
NonExponentialRB/: Invert_Binary_Matrix.py  Sample_Clifford_Element.py  Srb_With_Memory.py  Symplectic_Bijection.py  Symplectic_Clifford.py
data/: figure_1.npy  figure_2.npy  figure_3_a.npy  figure_3_a_delta_0.02.npy  figure_3_a_delta_0.04.npy  figure_3_a_delta_0.06.npy  figure_3_a_delta_0.08.npy  figure_3_a_delta_0.1.npy  figure_3_a_delta_0.12.npy  figure_3_a_delta_0.14.npy  figure_3_a_delta_0.16.npy  figure_3_a_delta_0.18.npy  figure_3_b.npy  figure_3_b_nq_1.npy  figure_3_b_nq_3.npy  figure_3_b_nq_5.npy  figure_3_b_nq_7.npy  figure_3_b_nq_9.npy  figure_4_with_1_qubits.npy  figure_4_with_20_qubits.npy  figure_4_with_5_qubits.npy
plots/: Figure_plan.md
src/: Figure_1.py  Figure_2.py  Figure_3.py  Figure_4.py  Figure_plan.md  Plot_Expectation_Values.py  Plot_Return_Prob.py  (+4 more)
(+13 files in other folders)
