[metadata]
name = non-exponentialRB
description = "Simulates RB with non-exponential decay"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orquestra-quantum
author = Athena Caesura and Pavithran Iyer
author_email = mathmeetsmusic@gmail.com,
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8,!=3.9.7,<3.11

install_requires =
    joblib==1.1.0
    matplotlib==3.5.1
    scipy==1.7.3
    numpy==1.21.4


[options.packages.find]
where = src

# TODO: this is a temporary solution until we find a good way 
# to have consistent dev requirements across multiple repositories
[options.extras_require]
dev =
    pytest~=6.2